add menu, categories and pages repositories
